--- a/src/Webpages/css/signup.css
+++ b/src/Webpages/css/signup.css
@@ -9,7 +9,7 @@ body,html{
 
 .container{
     width: 400px;
-    height: 520px;
+    height: 670px;
     background: rgb(33, 33, 58);
     color: black;
     position: absolute;
@@ -17,7 +17,7 @@ body,html{
     text-align: center;
     border: #db2020;
     margin-left: 850px;
-    margin-top: 110px;
+    margin-top: 25px;
     border-radius: 8px;
     border-color: red;
     border-width: 30px;
@@ -32,7 +32,8 @@ body,html{
     border-radius: 40px;
 }
 
-#username{
+
+input[type=text],input[type=password],input[type="email"],input[type="phone"]{
     background-color: #fff;
     border-width: 3px;
     border-color: black;
@@ -46,82 +47,6 @@ body,html{
     background: white;
     
 }
-
-#firstname{
-    background-color: #fff;
-    border-width: 3px;
-    border-color: black;
-    height: 30px;
-    width: 280px;
-    border-radius: 8px;
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: large;
-    color: blue;
-    background: white;
-    
-}
-
-#lastname{
-    background-color: #fff;
-    border-width: 3px;
-    border-color: black;
-    height: 30px;
-    width: 280px;
-    border-radius: 8px;
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: large;
-    color: blue;
-    background: white;
-    
-}
-
-#password{
-    background-color: #fff;
-    border-width: 3px;
-    border-color: black;
-    height: 30px;
-    width: 280px;
-    border-radius: 8px;
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: large;
-    color: blue;
-    background: white;
-    
-}
-
-#conformpassword{
-    background-color: #fff;
-    border-width: 3px;
-    border-color: black;
-    height: 30px;
-    width: 280px;
-    border-radius: 8px;
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: large;
-    color: blue;
-    background: white;
-    
-}
-
-#email{
-    background-color: #fff;
-    border-width: 3px;
-    border-color: black;
-    height: 30px;
-    width: 280px;
-    border-radius: 8px;
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: large;
-    color: blue;
-    background: white;
-    
-}
-
 
 #dob{
     background-color:rgb(33, 33, 58);
@@ -133,9 +58,7 @@ body,html{
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
-    color: white;
-    
-    
+    color: white;    
 }
 
 #signup{
