--- a/src/style/login.css
+++ b/src/style/login.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family:'Times New Roman', Times, serif;
-    background-image: url(Images/back1.jpg);
+    background-image: url(/src/Images/back1.jpg);
     background-repeat: no-repeat;
     background-size:auto; 
     background-position: center;
