Changed the file structure pre-final working condition

--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
-    <link rel="stylesheet" href="/style/login.css"> 
+    <link rel="stylesheet" href="style/login.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- <script src = "Form.js"></script>
     <script src="require.js"></script> -->
@@ -14,7 +14,7 @@
     <form class="container">
             <br/>
             <h1 class="name">Instagram</h1><br>
-            <img class="logo" src="/Images/Logo.jpeg"><br/><br>
+            <img class="logo" src="images/Logo.jpeg"><br/><br>
              <input class="UserName" type="text" placeholder="UserName" text="black" name="user" required><br/><br/>
              <input class="password" type="password" placeholder="Password" name="pswd" required><br/><br/>
              <div id="check" ><input type="checkbox" name="check" value="agree" required/> I Agree with terms and condition.</div><br/>
