--- a/public/style/login.css
+++ b/public/style/login.css
@@ -1,15 +1,20 @@
 *{
     margin: 0;
     padding: 0;
+    font-family:'Times New Roman', Times, serif;
+    background-image: url(/images/back1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto; 
+    background-position: center;
 }
 
-body,html{
-    background-image: url(/src/Images/back1.jpg);
+body, html{
+    min-height: 100%;
 }
 
 .container{
     width: 400px;
-    height: 670px;
+    height: 450px;
     background: rgb(33, 33, 58);
     color: black;
     position: absolute;
@@ -17,29 +22,38 @@ body,html{
     text-align: center;
     border: #db2020;
     margin-left: 850px;
-    margin-top: 25px;
+    margin-top: 110px;
     border-radius: 8px;
     border-color: red;
     border-width: 30px;
-    padding-bottom: 100px;
+
 }
 
-.label{
+
+.name{
     font-family: 'Beau Rivage', cursive;
     color: white;
-    /* background: linear-gradient(-135deg, blue, purple, red, pink, orange, yellow); */
-    font-size: 25px;
+    background: none;
+    font-size: 36px;
     border-radius: 40px;
+    border-color: white;
 }
 
+.logo{
+    width: 100px;
+    border-color: black;
+    background: white;
+    top: -50px;
+    border-radius: 20px;
+}
 
-input[type=text],input[type=password],input[type="email"],input[type="phone"]{
+.UserName{
     background-color: #fff;
     border-width: 3px;
     border-color: black;
     height: 30px;
     width: 280px;
-    border-radius: 8px;
+    border-radius: 50px;
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
@@ -48,20 +62,22 @@ input[type=text],input[type=password],input[type="email"],input[type="phone"]{
     
 }
 
-#dob{
-    background-color:rgb(33, 33, 58);
+.password{
+    background-color: #fff;
     border-width: 3px;
     border-color: black;
-    height: 20px;
+    height: 30px;
     width: 280px;
-    border-radius: 5px;
+    border-radius: 50px;
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
-    color: white;    
+    color: blue;
+    background: white;
+    
 }
 
-#signup{
+.login{
     border-width: 2px;
     height: 35px;
     width: 150px;
@@ -70,12 +86,45 @@ input[type=text],input[type=password],input[type="email"],input[type="phone"]{
     font-size: large;
     background-color: #75a6ec;
     background: #50A3C7;
-    color : white;
+    color: white;
     border-color: white;
 }
 
-#signup:hover{
-    background:  red;;
+.container #check{
+    color: white;
+    background: none;
+}
+
+.login:hover{
+    background:  black;
     color: white;
     border-color: whitesmoke;
+}
+
+.container #forgetpassword{
+    background: none;
+    color: white;
+}
+
+.container #account{
+    color: white;
+    background: none;
+}
+
+.container #signup{
+    color: red;
+    background: none;
+}
+
+.a{
+    text-decoration: none;
+    color: black;
+    background-color: white;
+}
+
+.a.ion-icons{
+     color: white;
+     font-size: 30px;
+     padding-left: 14px;
+     padding-top: 5px;
 }
