--- a/public/style/signup.css
+++ b/public/style/signup.css
@@ -1,20 +1,15 @@
 *{
     margin: 0;
     padding: 0;
-    font-family:'Times New Roman', Times, serif;
-    background-image: url(/Images/back1.jpg);
-    background-repeat: no-repeat;
-    background-size:auto; 
-    background-position: center;
 }
 
-body, html{
-    min-height: 100%;
+body,html{
+    background-image: url(/images/back1.jpg);
 }
 
 .container{
     width: 400px;
-    height: 450px;
+    height: 670px;
     background: rgb(33, 33, 58);
     color: black;
     position: absolute;
@@ -22,38 +17,29 @@ body, html{
     text-align: center;
     border: #db2020;
     margin-left: 850px;
-    margin-top: 110px;
+    margin-top: 25px;
     border-radius: 8px;
     border-color: red;
     border-width: 30px;
-
+    padding-bottom: 100px;
 }
 
-
-.name{
+.label{
     font-family: 'Beau Rivage', cursive;
     color: white;
-    background: none;
-    font-size: 36px;
+    /* background: linear-gradient(-135deg, blue, purple, red, pink, orange, yellow); */
+    font-size: 25px;
     border-radius: 40px;
-    border-color: white;
 }
 
-.logo{
-    width: 100px;
-    border-color: black;
-    background: white;
-    top: -50px;
-    border-radius: 20px;
-}
 
-.UserName{
+input[type=text],input[type=password],input[type="email"],input[type="phone"]{
     background-color: #fff;
     border-width: 3px;
     border-color: black;
     height: 30px;
     width: 280px;
-    border-radius: 50px;
+    border-radius: 8px;
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
@@ -62,22 +48,20 @@ body, html{
     
 }
 
-.password{
-    background-color: #fff;
+#dob{
+    background-color:rgb(33, 33, 58);
     border-width: 3px;
     border-color: black;
-    height: 30px;
+    height: 20px;
     width: 280px;
-    border-radius: 50px;
+    border-radius: 5px;
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
-    color: blue;
-    background: white;
-    
+    color: white;    
 }
 
-.login{
+#signup{
     border-width: 2px;
     height: 35px;
     width: 150px;
@@ -86,45 +70,12 @@ body, html{
     font-size: large;
     background-color: #75a6ec;
     background: #50A3C7;
-    color: white;
+    color : white;
     border-color: white;
 }
 
-.container #check{
-    color: white;
-    background: none;
-}
-
-.login:hover{
-    background:  black;
+#signup:hover{
+    background:  red;;
     color: white;
     border-color: whitesmoke;
-}
-
-.container #forgetpassword{
-    background: none;
-    color: white;
-}
-
-.container #account{
-    color: white;
-    background: none;
-}
-
-.container #signup{
-    color: red;
-    background: none;
-}
-
-.a{
-    text-decoration: none;
-    color: black;
-    background-color: white;
-}
-
-.a.ion-icons{
-     color: white;
-     font-size: 30px;
-     padding-left: 14px;
-     padding-top: 5px;
 }
