added temporary signin link

--- a/views/signup.html
+++ b/views/signup.html
@@ -23,6 +23,7 @@
         <i style="color: white; font-size: 20px; text-align: left;">Gender  : </i> <input type="radio" name="gender" value="Male"><i style="color: white;">Male</i>
         <input type="radio" name="gender" value="Female"><i style="color:white">Female</i><br><br>
         <button id="signup" type="submit">Sign Up</button>
+        <a href="/">Signin</a>
     </form>
 </body>
 </html>
