Successfully deployed on routing module

--- a/views/signup.html
+++ b/views/signup.html
@@ -8,7 +8,7 @@
     <link rel ="stylesheet" href="style/signup.css">
 </head>
 <body>
-    <form class="container"><br>
+    <form class="container" method="post" action="/reg"><br>
         <label class="label">Register</label><br><br>
         <input type="text" placeholder="UserName" name="username" required><br><br>
         <input type="text" placeholder="FirstName" name="fname" required><br><br>
