--- a/views/login.html
+++ b/views/login.html
@@ -13,9 +13,9 @@
   <body>
     <form class="container" action="/login" method="post">
       <br />
-      <h1 class="name">Instagram</h1>
+      <h1 class="name">Friends.com</h1>
       <br />
-      <img class="logo" src="images/Logo.jpeg" /><br /><br />
+      <img class="logo" src="images/Logo1.png" /><br /><br />
       <input
         class="UserName"
         type="text"
