--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="container">
             <div class="left_navabar">
-                <img src="images/logo.jpg" id="logo" class="images">
+                <img src="images/Logo1.png" id="logo" class="images">
                 <h3 id="name2">Friends.com</h3>
             </div> 
              <div class="search_bar">
@@ -27,7 +27,7 @@
                  <li><a href="" class="btn active"><i class="uil uil-home" ></i></a></li>
                  <li><a href="/upload" class="btn"><i class="uil uil-plus" > </i></a></li>
                  <li><a href="#" class="btn"><i class="uil uil-chat" ></i></a></li>
-                 <li><a href="/profile" class="btn"><img src="images/Profile Logo.png" alt="" class="images" id="profile"></a></li>
+                 <li><a href="/profile" class="btn"><img src="images/man.png" alt="" class="images" id="profile"></a></li>
                  <li><a href="#" class="btn"><i class="uil uil-exit"></i></a></li>                
             </div>
         </div> 
@@ -43,7 +43,7 @@
                     <div class="post">
                         <div class="head">
                              <div class="profile_photo">
-                                 <img src="images/Profile Logo.png" alt="" class="images">
+                                 <img src="images/man.png" alt="" class="images">
                              </div>
                              <div class="name">
                                  <h3>Tejas Gundale</h3>
@@ -52,7 +52,7 @@
                         </div>
 
                         <div class="photo">
-                             <img src="images/post1.jpg" alt="" class="post_photo">
+                             <img src="images/post1.png" alt="" class="post_photo">
                         </div>
 
                         <div class="action-button">
@@ -67,9 +67,9 @@
                         </div>
                              
                         <div class="liked-by">
-                                 <span><img src="images/profile2.jpg" alt="" class="image"></span>
-                                 <span><img src="images/profile3.jpg" alt="" class="image"></span>
-                                 <span><img src="images/profile4.jpg" alt="" class="image"></span>
+                                 <span><img src="images/profile2.png" alt="" class="image"></span>
+                                 <span><img src="images/profile3.png" alt="" class="image"></span>
+                                 <span><img src="images/profile4.png" alt="" class="image"></span>
                                  <p>Liked by <b>Name1</b> and <b>123 others</b></p>
                         </div>
 
@@ -86,7 +86,7 @@
                     <div class="post">
                         <div class="head">
                              <div class="profile_photo">
-                                 <img src="images/profile2.jpg" alt="" class="images">
+                                 <img src="images/profile2.png" alt="" class="images">
                              </div>
                              <div class="name">
                                  <h3>Name 1</h3>
@@ -95,7 +95,7 @@
                         </div>
 
                         <div class="photo">
-                             <img src="images/post2.jpg" alt="" class="post_photo">
+                             <img src="images/post2.png" alt="" class="post_photo">
                         </div>
 
                         <div class="action-button">
@@ -110,9 +110,9 @@
                         </div>
                              
                         <div class="liked-by">
-                                 <span><img src="images/profile2.jpg" alt="" class="image"></span>
-                                 <span><img src="images/profile3.jpg" alt="" class="image"></span>
-                                 <span><img src="images/profile4.jpg" alt="" class="image"></span>
+                                 <span><img src="images/profile2.png" alt="" class="image"></span>
+                                 <span><img src="images/profile3.png" alt="" class="image"></span>
+                                 <span><img src="images/profile4.png" alt="" class="image"></span>
                                  <p>Liked by <b>Name1</b> and <b>123 others</b></p>
                         </div>
 
@@ -129,7 +129,7 @@
                     <div class="post">
                         <div class="head">
                              <div class="profile_photo">
-                                 <img src="images/profile3.jpg" alt="" class="images">
+                                 <img src="images/profile3.png" alt="" class="images">
                              </div>
                              <div class="name">
                                  <h3>Name 2</h3>
@@ -138,7 +138,7 @@
                         </div>
 
                         <div class="photo">
-                             <img src="images/post3.jpg" alt="" class="post_photo"> 
+                             <img src="images/post3.png" alt="" class="post_photo"> 
                         </div>
 
                         <div class="action-button">
@@ -153,9 +153,9 @@
                         </div>
                              
                         <div class="liked-by">
-                                 <span><img src="images/profile2.jpg" alt="" class="image"></span>
-                                 <span><img src="images/profile3.jpg" alt="" class="image"></span>
-                                 <span><img src="images/profile4.jpg" alt="" class="image"></span>
+                                 <span><img src="images/profile2.png" alt="" class="image"></span>
+                                 <span><img src="images/profile3.png" alt="" class="image"></span>
+                                 <span><img src="images/profile4.png" alt="" class="image"></span>
                                  <p>Liked by <b>Name1</b> and <b>123 others</b></p>
                         </div>
 
@@ -171,7 +171,7 @@
                     <div class="post">
                         <div class="head">
                              <div class="profile_photo">
-                                 <img src="images/profile4.jpg" alt="" class="images">
+                                 <img src="images/profile4.png" alt="" class="images">
                              </div>
                              <div class="name">
                                  <h3>Name 3</h3>
@@ -180,7 +180,7 @@
                         </div>
 
                         <div class="photo">
-                             <img src="images/post4.jpg" alt="" class="post_photo">
+                             <img src="images/post4.png" alt="" class="post_photo">
                         </div>
 
                         <div class="action-button">
@@ -195,9 +195,9 @@
                         </div>
                              
                         <div class="liked-by">
-                                 <span><img src="images/profile2.jpg" alt="" class="image"></span>
-                                 <span><img src="images/profile3.jpg" alt="" class="image"></span>
-                                 <span><img src="images/profile4.jpg" alt="" class="image"></span>
+                                 <span><img src="images/profile2.png" alt="" class="image"></span>
+                                 <span><img src="images/profile3.png" alt="" class="image"></span>
+                                 <span><img src="images/profile4.png" alt="" class="image"></span>
                                  <p>Liked by <b>Name1</b> and <b>123 others</b></p>
                         </div>
 
@@ -221,7 +221,7 @@
                     
                     <div class="head">
                         <div class="profile_photo">
-                            <img src="images/profile4.jpg" alt="" class="images">
+                            <img src="images/profile4.png" alt="" class="images">
                         </div>
                         <div class="name">
                             <h3>Name 3  </h3>
@@ -236,7 +236,7 @@
 
                     <div class="head">
                       <div class="profile_photo">
-                        <img src="images/profile4.jpg" alt="" class="images">
+                        <img src="images/profile4.png" alt="" class="images">
                       </div>
                       <div class="name">
                         <h3>Name 3  </h3>
@@ -251,7 +251,7 @@
 
                     <div class="head">
                         <div class="profile_photo">
-                          <img src="images/profile4.jpg" alt="" class="images">
+                          <img src="images/profile4.png" alt="" class="images">
                         </div>
                         <div class="name">
                           <h3>Name 3  </h3>
@@ -266,7 +266,7 @@
 
                     <div class="head">
                         <div class="profile_photo">
-                          <img src="images/profile4.jpg" alt="" class="images">
+                          <img src="images/profile4.png" alt="" class="images">
                         </div>
                         <div class="name">
                           <h3>Name 3  </h3>
@@ -281,7 +281,7 @@
 
                     <div class="head">
                         <div class="profile_photo">
-                          <img src="images/profile4.jpg" alt="" class="images">
+                          <img src="images/profile4.png" alt="" class="images">
                         </div>
                         <div class="name">
                           <h3>Name 3  </h3>
@@ -305,7 +305,7 @@
                     
                     <div class="head">
                         <div class="profile_photo">
-                            <img src="images/profile4.jpg" alt="" class="images">
+                            <img src="images/profile4.png" alt="" class="images">
                         </div>
                         <div class="name">
                             <h3>Name 3  </h3>
@@ -326,7 +326,7 @@
 
                    <div class="head">
                       <div class="profile_photo">
-                          <img src="images/profile4.jpg" alt="" class="images">
+                          <img src="images/profile4.png" alt="" class="images">
                       </div>
                       <div class="name">
                           <h3>Name 3  </h3>
@@ -346,7 +346,7 @@
 
                     <div class="head">
                         <div class="profile_photo">
-                            <img src="images/profile4.jpg" alt="" class="images">
+                            <img src="images/profile4.png" alt="" class="images">
                         </div>
                         <div class="name">
                             <h3>Name 3  </h3>
@@ -366,7 +366,7 @@
 
                     <div class="head">
                         <div class="profile_photo">
-                            <img src="images/profile4.jpg" alt="" class="images">
+                            <img src="images/profile4.png" alt="" class="images">
                         </div>
                         <div class="name">
                             <h3>Name 3  </h3>
@@ -386,7 +386,7 @@
 
                    <div class="head">
                       <div class="profile_photo">
-                        <img src="images/profile4.jpg" alt="" class="images">
+                        <img src="images/profile4.png" alt="" class="images">
                       </div>
                       <div class="name">
                         <h3>Name 3  </h3>
