--- a/views/profile.html
+++ b/views/profile.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="container">
             <div class="left_navabar">
-                <img src="images/logo.jpg" class="images">
+                <img src="images/Logo1.png" class="images">
                 <h3 id="name2">Friends.com</h3>
             </div> 
              <div class="search_bar">
@@ -26,7 +26,7 @@
                  <li><a href="/home" class="btn"><i class="uil uil-home" ></i></a></li>
                  <li><a href="/upload" class="btn"><i class="uil uil-plus" > </i></a></li>
                  <li><a href="#" class="btn"><i class="uil uil-chat" ></i></a></li>
-                 <li><a href="" class="btn active"><img src="images/Profile Logo.png" alt="" class="images" id="profile"></a></li>
+                 <li><a href="" class="btn active"><img src="images/man.png" alt="" class="images" id="profile"></a></li>
                  <li><a href="#" class="btn"><i class="uil uil-exit"></i></a></li>
             </div>
         </div>
@@ -37,13 +37,13 @@
          <div class="container">
              <div class="left">
                     <div class="container1">
-                        <img src="images/post3.jfif" style="height: 300px; width: 600px;">
+                        <img src="images/cover.png" style="height: 300px; width: 600px;">
                         <img src="images/man.png" style="height: 160px; margin-left: 218px; margin-top: -130px;">
-                        <div style="margin-left: auto; margin-right: auto; width: 5em; font-size: 30px;">
+                        <div style="font-size: 25px; text-align: center;">
                             <span>User Name</span>
                         </div>
-                        <div style=" margin-left: 200px; margin-right: auto; width: 15em; font-size: large; padding: 4px;">
-                            <span>Mayank Mangal Mourya</span>
+                        <div style="text-align: center; font-size: 20px;">
+                            <span>Name</span>
                         </div>
                         <div style="margin-left: auto; margin-right: auto;; font-size: 25px; display: flex; grid-template-columns: auto 120px; column-gap: 10rem; margin-left: 100px; padding: 10px;">
                              <div>
@@ -56,31 +56,31 @@
                         <div style="background-color:cadetblue ; height: 220px; width: 570px; margin-left: 15px; border-radius: 30px;  display: flex; flex-wrap: wrap; overflow-y: auto; padding: 5px; ">
 
                             <div class="gallery">
-                                <img src="images/post1.jfif" alt="">
+                                <img src="images/post1.png" alt="">
                             </div>
                             <div class="gallery">
-                                <img src="images/post2.jfif" alt="">
+                                <img src="images/post2.png" alt="">
                             </div>
                             <div class="gallery">
-                                <img src="images/post3.jfif" alt="">
+                                <img src="images/post3.png" alt="">
                             </div>
                             <div class="gallery">
-                                <img src="images/post1.jfif" alt="">
+                                <img src="images/post1.png" alt="">
                             </div>
                             <div class="gallery">
-                                <img src="images/post1.jfif" alt="">
+                                <img src="images/post1.png" alt="">
                             </div>
                             <div class="gallery">
-                                <img src="images/post1.jfif" alt="">
+                                <img src="images/post1.png" alt="">
                             </div>
                             <div class="gallery">
-                                <img src="images/post1.jfif" alt="">
+                                <img src="images/post1.png" alt="">
                             </div>
                             <div class="gallery">
-                                <img src="images/post1.jfif" alt="">
+                                <img src="images/post1.png" alt="">
                             </div>
                             <div class="gallery">
-                                <img src="images/post1.jfif" alt="">
+                                <img src="images/post1.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -94,16 +94,16 @@
                     <div class="post">
                         <div class="head">
                              <div class="profile_photo">
-                                 <img src="images/Profile Logo.jfif" alt="" class="images">
+                                 <img src="images/man.png" alt="" class="images">
                              </div>
                              <div class="name">
-                                 <h3>Tejas Gundale</h3>
+                                 <h3>Name</h3>
                                  <small>10 Min ago</small>
                              </div>
                         </div>
 
                         <div class="photo">
-                             <img src="images/post1.jfif" alt="" class="post_photo">
+                             <img src="images/post1.png" alt="" class="post_photo">
                         </div>
 
                         <div class="action-button">
@@ -118,14 +118,14 @@
                         </div>
                              
                         <div class="liked-by">
-                                 <span><img src="images/profile2.jfif" alt="" class="image"></span>
-                                 <span><img src="images/profile3.jfif" alt="" class="image"></span>
-                                 <span><img src="images/profile4.jfif" alt="" class="image"></span>
+                                 <span><img src="images/profile2.png" alt="" class="image"></span>
+                                 <span><img src="images/profile3.png" alt="" class="image"></span>
+                                 <span><img src="images/profile4.png" alt="" class="image"></span>&nbsp; &nbsp;
                                  <p>Liked by <b>Name1</b> and <b>123 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Tejas Gundale</b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p><b>Name</b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div> 
 
                         <div class="comments text-muted">
@@ -137,16 +137,16 @@
                     <div class="post">
                         <div class="head">
                              <div class="profile_photo">
-                                 <img src="images/profile2.jfif" alt="" class="images">
+                                 <img src="images/man.png" alt="" class="images">
                              </div>
                              <div class="name">
-                                 <h3>Name 1</h3>
+                                 <h3>Name</h3>
                                  <small>25 Min ago</small>
                              </div>
                         </div>
 
                         <div class="photo">
-                             <img src="images/post2.jfif" alt="" class="post_photo">
+                             <img src="images/post2.png" alt="" class="post_photo">
                         </div>
 
                         <div class="action-button">
@@ -161,14 +161,14 @@
                         </div>
                              
                         <div class="liked-by">
-                                 <span><img src="images/profile2.jfif" alt="" class="image"></span>
-                                 <span><img src="images/profile3.jfif" alt="" class="image"></span>
-                                 <span><img src="images/profile4.jfif" alt="" class="image"></span>
+                                 <span><img src="images/profile2.png" alt="" class="image"></span>
+                                 <span><img src="images/profile3.png" alt="" class="image"></span>
+                                 <span><img src="images/profile4.png" alt="" class="image"></span>&nbsp; &nbsp;
                                  <p>Liked by <b>Name1</b> and <b>123 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Name1</b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p><b>Name</b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div> 
 
                         <div class="comments text-muted">
@@ -180,16 +180,16 @@
                     <div class="post">
                         <div class="head">
                              <div class="profile_photo">
-                                 <img src="images/profile3.jfif" alt="" class="images">
+                                 <img src="images/man.png" alt="" class="images">
                              </div>
                              <div class="name">
-                                 <h3>Name 2</h3>
+                                 <h3>Name</h3>
                                  <small>45 Min ago</small>
                              </div>
                         </div>
 
                         <div class="photo">
-                             <img src="images/post3.jfif" alt="" class="post_photo"> 
+                             <img src="images/post3.png" alt="" class="post_photo"> 
                         </div>
 
                         <div class="action-button">
@@ -204,14 +204,14 @@
                         </div>
                              
                         <div class="liked-by">
-                                 <span><img src="images/profile2.jfif" alt="" class="image"></span>
-                                 <span><img src="images/profile3.jfif" alt="" class="image"></span>
-                                 <span><img src="images/profile4.jfif" alt="" class="image"></span>
+                                 <span><img src="images/profile2.png" alt="" class="image"></span>
+                                 <span><img src="images/profile3.png" alt="" class="image"></span>
+                                 <span><img src="images/profile4.png" alt="" class="image"></span>&nbsp; &nbsp;
                                  <p>Liked by <b>Name1</b> and <b>123 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Name2</b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p><b>Name</b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div> 
 
                         <div class="comments text-muted">
@@ -222,16 +222,16 @@
                     <div class="post">
                         <div class="head">
                              <div class="profile_photo">
-                                 <img src="images/profile4.jpg" alt="" class="images">
+                                 <img src="images/man.png" alt="" class="images">
                              </div>
                              <div class="name">
-                                 <h3>Name 3</h3>
+                                 <h3>Name</h3>
                                  <small>55 Min ago</small>
                              </div>
                         </div>
 
                         <div class="photo">
-                             <img src="images/post4.jfif" alt="" class="post_photo">
+                             <img src="images/post4.png" alt="" class="post_photo">
                         </div>
 
                         <div class="action-button">
@@ -246,14 +246,14 @@
                         </div>
                              
                         <div class="liked-by">
-                                 <span><img src="images/profile2.jfif" alt="" class="image"></span>
-                                 <span><img src="images/profile3.jfif" alt="" class="image"></span>
-                                 <span><img src="images/profile4.jfif" alt="" class="image"></span>
+                                 <span><img src="images/profile2.png" alt="" class="image"></span>
+                                 <span><img src="images/profile3.png" alt="" class="image"></span>
+                                 <span><img src="images/profile4.png" alt="" class="image"></span>&nbsp; &nbsp;
                                  <p>Liked by <b>Name1</b> and <b>123 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Name 3</b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p><b>Name</b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div> 
 
                         <div class="comments text-muted">
