--- a/views/profile.html
+++ b/views/profile.html
@@ -39,17 +39,17 @@
                     <div class="container1">
                         <img src="images/cover.png" style="height: 300px; width: 600px;">
                         <img src="images/man.png" style="height: 160px; margin-left: 218px; margin-top: -130px;">
-                        <div style="font-size: 25px; text-align: center;">
-                            <span>User Name</span>
+                        <div style="font-size: 25px; text-align: center;" id="username">
+                            <span>12489</span>
                         </div>
                         <div style="text-align: center; font-size: 20px;">
                             <span>Name</span>
                         </div>
                         <div style="margin-left: auto; margin-right: auto;; font-size: 25px; display: flex; grid-template-columns: auto 120px; column-gap: 10rem; margin-left: 100px; padding: 10px;">
-                             <div>
+                             <div id="Friends">
                                  Friend : 20
                              </div>
-                             <div>
+                             <div id="Posts">
                                  Post : 30
                              </div>
                         </div>
