added logout route, home.js for homepage logic added, some comments in sbscripts and beautified htmls

--- a/views/profile.html
+++ b/views/profile.html
@@ -27,7 +27,7 @@
                  <li><a href="/upload" class="btn"><i class="uil uil-plus" > </i></a></li>
                  <li><a href="#" class="btn"><i class="uil uil-chat" ></i></a></li>
                  <li><a href="" class="btn active"><img src="images/man.png" alt="" class="images" id="profile"></a></li>
-                 <li><a href="#" class="btn"><i class="uil uil-exit"></i></a></li>
+                 <li><a href="/logout" class="btn"><i class="uil uil-exit"></i></a></li>
             </div>
         </div>
     </nav>
