--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -39,8 +39,8 @@
                     <div class="container1">
                         <img src="images/cover.png" style="height: 300px; width: 600px;">
                         <img src="images/man.png" style="height: 160px; margin-left: 218px; margin-top: -130px;">
-                        <div style="font-size: 25px; text-align: center;" id="username">
-                            <span>12489</span>
+                        <div style="font-size: 25px; text-align: center;" >
+                            <span><%=Username%></span>
                         </div>
                         <div style="text-align: center; font-size: 20px;">
                             <span>Name</span>
