Updated chat module and his references and worked on home.js

--- a/views/chat.html
+++ b/views/chat.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="syle/chat.css">
+    <link rel="stylesheet" href="style/chat.css">
 </head>
 <body>
     <!-- -------------------------header------------------------- -->
     <nav>
         <div class="container">
             <div class="left_navabar">
-                <img src="images/logo.jpg" class="images">
+                <img src="images/Logo1.png" class="images">
                 <h3 id="name2">Friends.com</h3>
             </div> 
              <div class="search_bar">
@@ -26,7 +26,7 @@
                  <li><a href="/home" class="btn"><i class="uil uil-home" ></i></a></li>
                  <li><a href="/upload" class="btn"><i class="uil uil-plus" > </i></a></li>
                  <li><a href="#" class="btn active"><i class="uil uil-chat" ></i></a></li>
-                 <li><a href="" class="btn"><img src="images/man.png" alt="" class="images" id="profile"></a></li>
+                 <li><a href="/profile" class="btn"><img src="images/man.png" alt="" class="images" id="profile"></a></li>
                  <li><a href="/logout" class="btn"><i class="uil uil-exit"></i></a></li>
             </div>
         </div>
