--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
             <a href="/upload" class="btn"><i class="uil uil-plus"> </i></a>
           </li>
           <li>
-            <a href="#" class="btn"><i class="uil uil-chat"></i></a>
+            <a href="/chat" class="btn"><i class="uil uil-chat"></i></a>
           </li>
           <li>
             <a href="/profile" class="btn"
