--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,9 +25,9 @@
              <div class="right_navbar">
                  <li><a href="/home" class="btn"><i class="uil uil-home" ></i></a></li>
                  <li><a href="/upload" class="btn"><i class="uil uil-plus" > </i></a></li>
-                 <li><a href="#" class="btn"><i class="uil uil-chat" ></i></a></li>
+                 <li><a href="/chat" class="btn"><i class="uil uil-chat" ></i></a></li>
                  <li><a href="" class="btn active"><img src="images/man.png" alt="" class="images" id="profile"></a></li>
-                 <li><a href="#" class="btn"><i class="uil uil-exit"></i></a></li>
+                 <li><a href="/logout" class="btn"><i class="uil uil-exit"></i></a></li>
             </div>
         </div>
     </nav>
