Created post.js, routed /home via home.js and tried to work with person variable in login.js

--- a/views/login.html
+++ b/views/login.html
@@ -32,7 +32,7 @@
         required
       /><br /><br />
       <div id="check">
-        <input type="checkbox" name="check" value="agree" required /> I Agree
+        <input type="checkbox" name="check" value="agree"  /> I Agree
         with terms and condition.
       </div>
       <br />
