Added chat.js and related things

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -99,7 +99,7 @@
                                  <img src="images/man.png" alt="" class="images">
                              </div>
                              <div class="name">
-                                 <h3>Name</h3>
+                                 <h3><%=Name%></h3>
                                  <small>10 Min ago</small>
                              </div>
                         </div>
