--- a/views/welcome.html
+++ b/views/welcome.html
@@ -4,12 +4,126 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Welcome!!</title>
+    <link rel="stylesheet" href="style/welcome.css">
 </head>
 <body>
-    <div class="container" style="text-align: center;"><h1>Welcome! New Member Your signup is successful</h1>
-    <p>Please make some new friends in order to proceed forward.</p>
-    <a href="/home">This is the homepage for you to go.</a></div>
-    <script>alert("Successful Signup")</script>    
+    <div class="header">
+          <h1>Welcome! New Member Your signup is successful</h1>
+         
+          <h3>Please make some new friends in order to proceed forward.</h3>
+          
+    </div>
+    <div class="friendlist">
+            <div class="container1">
+
+                <div class="header">
+                  <h3>Here are some people you might know</h3>  
+                </div>
+                <div class="head">
+                    <div class="profile_photo">
+                        <img src="Images/profile4.png" alt="" class="images">
+                    </div>
+                    <div class="name">
+                        <h3>Name 3  </h3>
+                        <small>3 Mutual Friends</small>
+                    </div>
+                    <div class="button">
+                        <a href="">
+                            Add Friend
+                        </a>
+                    </div>
+               </div>
+               <div class="head">
+                   <div class="profile_photo">
+                     <img src="Images/profile4.png" alt="" class="images">
+                   </div>
+                   <div class="name">
+                       <h3>Name 3  </h3>
+                       <small>3 Mutual Friends</small>
+                    </div>
+                    <div class="button">
+                       <a href="">
+                           Add Friend
+                       </a>
+                    </div>
+               </div>
+               <div class="head">
+                <div class="profile_photo">
+                  <img src="Images/profile4.png" alt="" class="images">
+                </div>
+                <div class="name">
+                    <h3>Name 3  </h3>
+                    <small>3 Mutual Friends</small>
+                 </div>
+                 <div class="button">
+                    <a href="">
+                        Add Friend
+                    </a>
+                 </div>
+                 </div>
+                 <div class="head">
+                    <div class="profile_photo">
+                      <img src="Images/profile4.png" alt="" class="images">
+                    </div>
+                    <div class="name">
+                        <h3>Name 3  </h3>
+                        <small>3 Mutual Friends</small>
+                     </div>
+                     <div class="button">
+                        <a href="">
+                            Add Friend
+                        </a>
+                     </div>
+                </div>
+                <div class="head">
+                    <div class="profile_photo">
+                      <img src="Images/profile4.png" alt="" class="images">
+                    </div>
+                    <div class="name">
+                        <h3>Name 3  </h3>
+                        <small>3 Mutual Friends</small>
+                     </div>
+                     <div class="button">
+                        <a href="">
+                            Add Friend
+                        </a>
+                     </div>
+                </div>
+                <div class="head">
+                    <div class="profile_photo">
+                      <img src="Images/profile4.png" alt="" class="images">
+                    </div>
+                    <div class="name">
+                        <h3>Name 3  </h3>
+                        <small>3 Mutual Friends</small>
+                     </div>
+                     <div class="button">
+                        <a href="">
+                            Add Friend
+                        </a>
+                     </div>
+                </div>
+                <div class="head">
+                    <div class="profile_photo">
+                      <img src="Images/profile4.png" alt="" class="images">
+                    </div>
+                    <div class="name">
+                        <h3>Name 3  </h3>
+                        <small>3 Mutual Friends</small>
+                     </div>
+                     <div class="button">
+                        <a href="">
+                            Add Friend
+                        </a>
+                     </div>
+                </div>
+
+            
+            </div>
+        </div>
+        <div id="button">
+                <a href="">Home</a>
+        </div>
 </body>
 </html>
