Added cookies and updated referenced of userID

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -150,7 +150,7 @@
                     </div>
                     <div class="msg_section">
                         <% chatlist.forEach((item)=>{%>
-                            <% if(item.toUser === '12489'){ %>
+                            <% if(item.toUser === 'user1'){ %>
                                 <div class="mymsg msguser">
                                     <p><%=item.message%><br><span><%=item.tmstp%></span></p>
                                 </div>
