--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -110,7 +110,10 @@
 
                         <div class="action-button">
                              <div class="like_comment">
-                                  <span><i class="uil uil-heart"></i></span>
+                                <form action="/like" method="post">
+                                    <button type="submit"><span><i class="uil uil-heart"></i></span>
+                                    </button>
+                               </form>
                                   <span><i class="uil uil-comment-dots"></i></span>
                                   <span><i class="uil uil-share-alt"></i></span>
                              </div>
