--- a/views/signup.html
+++ b/views/signup.html
@@ -22,6 +22,7 @@
         <input type="date" name="dob" required><br><br>
         <i style="color: white; font-size: 20px; text-align: left;">Gender  : </i> <input type="radio" name="gender" value="Male"><i style="color: white;">Male</i>
         <input type="radio" name="gender" value="Female"><i style="color:white">Female</i><br><br>
+        <button id="upload"><a href="/upload_profile.html" >Upload Profile Photo</a></button><br><br>
         <button id="signup" type="submit">Sign Up</button>
         <a href="/">Signin</a>
     </form>
