--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,7 +44,7 @@
             /></a>
           </li>
           <li>
-            <a href="#" class="btn"><i class="uil uil-exit"></i></a>
+            <a href="/logout" class="btn"><i class="uil uil-exit"></i></a>
           </li>
         </div>
       </div>
