--- a/public/style/Profile.css
+++ b/public/style/Profile.css
@@ -30,13 +30,13 @@ body{
 }
 
 nav{
-    width: 100%;  
-    background-color: #5256ad;
+    width: 100%;
+    background-image: linear-gradient(to right, rgba(20, 23, 186, 0.4), rgb(38, 208, 227), rgb(137, 128, 201));
     padding: none;
     position: fixed;
     height: 51px;
     z-index: 10;
-    border-bottom: 2px solid rgb(0, 0, 0);
+    border-bottom: 2px solid black;
 
 }
 
@@ -48,20 +48,20 @@ nav .container{
 
 #name2{
     font-size: 30px;
-   margin-top: -44px;
-   margin-left: 45px;
-   align-items: center;
-   font-family: 'Ms Madi', cursive;
+    margin-top: -50px;
+    margin-left: 45px;
+    align-items: center;
+    font-family: 'Ms Madi', cursive;
 }
 
 
 nav .search_bar{
     background: rgb(216, 202, 202);
-    border-radius:10px ;
+    border-radius: 10px;
     width: 450px;
-    margin-left: 250px;
+    margin-left: 200px;
     align-items: center;
-    margin-top: 7px;
+    margin-top: 2px;
 }
 
 nav .search_bar input[type="search"]{
@@ -85,6 +85,26 @@ nav .container .right_navbar{
     width: 250px;   
 }
 
+nav .container .mid{
+    display: flex;
+    position: relative;
+    margin-left: 80px;
+    margin-top: 5px;
+}
+
+button{
+    height: 40px;
+    width: 100px;
+    background-color: aqua;
+    font: 30px;
+    border: 3px solid blue;
+    border-radius: 10px;
+}
+
+nav .container .mid button :hover{
+    background-color: white;
+    color: black;
+}
 
 nav .container .right_navbar li{
     list-style: none;
@@ -105,17 +125,17 @@ nav .container .right_navbar li a{
 }
 
 
-nav .container .right_navbar li .active{
-    color: rgb(195, 120,8);
-    border-bottom: 5px solid  rgb(195, 120,8);
+nav .container .right_navbar li .active {
+    color : rgb(17,0,255);
+    border-bottom: 5px solid  rgb(17,0,255);
     width: 100%;
     border-radius: 5px;
     transition: 0.5 ease;
 }
 
-nav .container .right_navbar li :hover{
-    color:  rgb(195, 120, 8);
-    opacity: 0.8;
+nav .container .right_navbar li :hover {
+    color:  white;
+    opacity: 1;
 
 }
 
